--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,6 @@ header {
     height: 7em;
 }
 
-footer {
-    background: rgb(90, 88, 88);
-    height: 5em;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-}
-
-footer > p {
-    margin-top: 1.5em;
-}
-
 ul {
     list-style-type: none;
     display: inline-flex;
@@ -81,9 +68,32 @@ li {
 .navlink:hover {
     color: rgb(41, 37, 37);
     text-shadow: 0 0 2px rgb(218, 135, 58);
-    border-bottom: 2px solid  rgb(218, 135, 58);
+    border-bottom: 2px solid  rgb(218, 135, 58);  
+}
+
+@media (max-width: 590px) {
+    ul {
+        display: inline-block;
+        margin: 0;
+        margin-bottom: .6em;
+    }
+
+    header {
+        height: initial;
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    li {
+        text-align: center;
+    }
+
     
 }
+
+/* section style and layout */
 
 section {
     display: grid;
@@ -94,9 +104,8 @@ section {
     width: 90%;
     max-width: 1000px;
     margin: 0 auto;
-    height: calc(100vh - 12em);
+    height: calc(100vh - 13em);
     padding: 10px 0;
-
 }
 
 .main {
@@ -109,8 +118,8 @@ section {
 }
 
 .info {
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
+    grid-row: span 2;
+    grid-column: span 2;
 }
 
 .info2 {
@@ -149,4 +158,65 @@ section {
     color: rgb(41, 37, 37);
     text-shadow: 0 0 2px rgb(218, 135, 58);
     border-bottom: 2px solid  rgb(218, 135, 58);
+}
+
+.info:hover, .button:hover, .last:hover {
+    background: #fff;
+}
+
+footer {
+    background: rgb(90, 88, 88);
+    height: 5em;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+}
+
+footer > p {
+    margin-top: 1.5em;
+}
+
+@media (max-width: 590px) {
+    section {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    p {
+        margin-bottom: .5em;
+    }
+
+    .pic {
+        order: -1;
+        height: 19em;
+        opacity: 1;
+    }
+
+    footer {
+        position: relative;
+        bottom: 0;
+        height: initial;
+    }
+
+    footer > p {
+        margin: 0.5em;
+    }
+
+    .button, .last {
+        
+    }
+
+    .main > a {
+        padding: .7em 0;
+        width: 100%;
+        text-align: center;
+        color: rgb(41, 37, 37);
+        text-shadow: 0 0 5px rgb(71, 71, 66);
+    }
+
+    .main > a:active, .navlink:active {
+        color: rgb(218, 135, 58);
+    }
 }
