--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ footer > p {
     section {
         display: flex;
         flex-direction: column;
-        column-gap: 20px;
+        margin: 0 20px;
         height: 100%;
     }
 
